# libheif-rs

./: CHANGELOG.md  Cargo.toml  README.md  release.toml
.github/workflows/: check_and_test.yaml
data/: alpha.heif  grid.heif  test.heic
src/: auxiliary_image_handle.rs  color_profile.rs  context.rs  decoder.rs  encoder.rs  enums.rs  errors.rs  heif.rs  image.rs  image_handle.rs  lib.rs  metadata.rs  reader.rs  regions.rs  security_limits.rs  sequences.rs  track.rs  utils.rs
src/integration/: image.rs
tests/: heif_struct_test.rs  integration.rs  read_test.rs  regions_test.rs  security_limits.rs  sequences.rs  write_test.rs
